Made flex-vertical-center style's alignment safe (to fix participant import)

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -802,7 +802,7 @@ button.mat-menu-item.selected {
 
 .flex-vertical-center {
     display: flex;
-    align-items: center;
+    align-items: safe center;
     flex-direction: row;
 
     &.align-left {
